# ds-cf-pset3-ahmed-elazzab

./: .coveragerc  .flake8  .flake8_notebooks  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-devel.txt  requirements-ipa.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_issue.md
.github/workflows/: cw.yml
deployment/: Dockerfile_IPA_base
deployment/helm/: custom-values.yaml
deployment/helm/ipa/templates/config/: envvars.yaml  init-scripts.yaml
deployment/helm/ipa/templates/ipaapi/: ipa-api-deployment.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/modules/: pset3_ahmed_elazzab.helloworld.md
docs/docs/modules/pset3_ahmed_elazzab.exe/: getting_started.md  source_code.md
input_data/: kc_house_data.csv:PG$Secure  kc_house_data.csv:Zone.Identifier
notebooks/: hello_world.ipynb  hello_world.py
output/model_registry/: linear_2024-07-30_142311.pk  linear_2024-07-30_175351.pkl
src/: __init__.py  data_processor.py  main.py  utils.py
src/predictors/: abstract_predictor.py  lr_predictor.py  svm_predictor.py
src/pset3_ahmed_elazzab/: __init__.py  test_hello_world.py
src/pset3_ahmed_elazzab/custom_ipa_endpoints/: hello.py
src/pset3_ahmed_elazzab/exe/: README.md  __init__.py  hello_world.py
src/tests/: test_data_processor.py  test_predictor_lr.py  test_predictor_svm.py  test_utils.py
test/: cookiecutter_vars.yaml  ipa.json  run_pytest_cov.py
