[build-system]
requires = ["setuptools>=61.0", "pip >= 23.1", "setuptools-scm>=6.4.2,<7",]
build-backend = "setuptools.build_meta"

[project]
name = "pg-ds-cf-pset3-ahmed-elazzab"
authors = [
    {name = "Azab, Ahmed", email = "azab.am@pg.com"}
]
description = "DSdev PSET3 ahmed elazab"
requires-python = "==3.9.*"
keywords = [
    "P&G", "Procter&Gamble", "D&A", "Data&Analytics",
    "pset3_Ahmed_Elazzab", "DS", "AIE"
]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3.9"
]
dynamic = ["version", "dependencies", "optional-dependencies", "scripts"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/pg-ds-dev-class/ds-cf-pset3-ahmed-elazzab"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
devel = {file = ["requirements-devel.txt"]}

# automatically find packages
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.black]
line-length = 119
safe = true
skip-string-normalization = true
target-version = ['py39']

[tool.isort]
multi_line_output = 3
force_single_line = false
group_by_package = true
combine_as_imports = true
line_length = 119
include_trailing_comma = true
